fix: reference list spacing on hide

--- a/_sass/trainingsplan.sass
+++ b/_sass/trainingsplan.sass
@@ -701,3 +701,9 @@ a.help
     cursor: pointer
     font-weight: 100
 
+#reference-list
+    display: none
+    ul
+        list-style-position: inside
+        margin-left: 30px
+
